# KMeans

./: .clang-tidy  =4.2.0  CMakeLists.txt  KMeansCPP.cpp  kmeansFunctions.cpp
.cache/clangd/index/: KMeansCPP.cpp.29FC704A9DF449F7.idx  kmeansFunctions.cpp.BFF6EC1EC12F813B.idx  kmeansFunctions.h.27D55AC3DC066332.idx
assets/: centroids.csv  data.csv  data2.csv
python/: analysis.ipynb  generate_datapoints.py
src/: KMeansCPP.cpp  kmeansFunctions.cpp  kmeansFunctions.h  main.cpp
